[package]
name = "ironcore-documents"
description = "A library for working with IronCore Labs documents and header formats."
version = "0.3.1-pre.1"
edition = "2024"
license = "AGPL-3.0-only"
documentation = "https://docs.rs/ironcore-documents"
readme = "README.md"
repository = "https://github.com/IronCoreLabs/ironcore-documents"
categories = ["algorithms", "cryptography"]
keywords = ["cryptography"]
rust-version = "1.85.0"

[dependencies]
aes-gcm = "0.10.3"
bytes = "1"
hex = "0.4"
hmac = "0.13"
itertools = "0.14.0"
protobuf = { version = "3.3", features = ["with-bytes"] }
rand = "0.10.0"
sha2 = "0.11"
thiserror = "2"

[build-dependencies]
protobuf-codegen = "3.3"

[dev-dependencies]
hex-literal = "1.0.0"
rand_chacha = "0.10"
